# se-toolkit-hackathon

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml
backend/routers/: bookmarks.py  digests.py  news.py  preferences.py
backend/services/: llm_service.py  news_service.py
frontend/: index.html
